--- a/nieTRIS future/MainMenu.xaml
+++ b/nieTRIS future/MainMenu.xaml
@@ -8,22 +8,43 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <StaticResource x:Key="ButtonBackground" ResourceKey="ButtonSemi"/>
+        <StaticResource x:Key="ButtonBackgroundPointerOver" ResourceKey="ButtonOn" />
+        <ImageBrush x:Key="ButtonSemi" ImageSource="assets/button_semi.png"/>
+        <ImageBrush x:Key="ButtonOn" ImageSource="assets/button_on.png"/>
+    </Page.Resources>
+    
     <Grid Background="Black">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" x:Name="PLAY" Content="PLAY" HorizontalAlignment="Stretch" Margin="40,138,40,0" VerticalAlignment="Top" Height="65" Background="#33FFFFFF" BorderBrush="#FF00DEAD" Click="NavigateToPlayPage" Foreground="White" FontWeight="Bold" FontSize="24" FontFamily="Assets/Fonts/neuropolitical rg.ttf#Neuropolitical Rg"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button GotFocus="ButtonGotFocus" LostFocus="ButtonLostFocus" Grid.Row="1" Grid.Column="0" x:Name="PLAY" Content="PLAY" HorizontalAlignment="Stretch" Height="130" Click="NavigateToPlayPage" Foreground="White" FontWeight="Bold" FontSize="24" AllowFocusOnInteraction="False" UseSystemFocusVisuals="False">
+                
+            </Button>
 
-        <Button Grid.Column="0" x:Name="STATS" Content="STATS" HorizontalAlignment="Stretch" Margin="40,239,40,0" VerticalAlignment="Top" Height="65" Background="#33FFFFFF" BorderBrush="#FF00DEAD" Click="NavigateToStatsPage" Foreground="White" FontWeight="Bold" FontSize="24" FontFamily="Neuropolitical Rg">
-           
-        </Button>
+            <Button GotFocus="ButtonGotFocus" LostFocus="ButtonLostFocus" Grid.Row="2" Grid.Column="0" x:Name="STATS" Content="STATS" HorizontalAlignment="Stretch" Height="130"  Click="NavigateToStatsPage" Foreground="White" FontWeight="Bold" FontSize="24" UseSystemFocusVisuals="False">
+               
+            </Button>
 
+            <Button GotFocus="ButtonGotFocus" LostFocus="ButtonLostFocus" Grid.Row="3" Grid.Column="0" x:Name="CREDITS" Content="CREDITS" HorizontalAlignment="Stretch" Height="130"  Click="NavigateToStatsPage" Foreground="White" FontWeight="Bold" FontSize="24" UseSystemFocusVisuals="False">
+               
+            </Button>
 
-
-        <Button Grid.Column="0" x:Name="EXIT" Content="EXIT" HorizontalAlignment="Stretch" Margin="40,338,40,0" VerticalAlignment="Top" Height="65" Background="#33FFFFFF" BorderBrush="#FF00DEAD" Click="Exit" Foreground="White" FontWeight="Bold" FontSize="24" FontFamily="Neuropolitical Rg"/>
-
-
+            <Button GotFocus="ButtonGotFocus" LostFocus="ButtonLostFocus" Grid.Row="4" Grid.Column="0" x:Name="EXIT" Content="EXIT" HorizontalAlignment="Stretch" Height="130" Click="Exit" Foreground="White" FontWeight="Bold" FontSize="24" UseSystemFocusVisuals="False">
+                
+            </Button>
+        </Grid>
         <Image Grid.Column="1" Margin="80,40,80,40" Source="Assets/nieTris logo.png"/>
     </Grid>
 </Page>
