--- a/nieTRIS future/GamePage.xaml
+++ b/nieTRIS future/GamePage.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-        <SwapChainPanel x:Name="swapChainPanel" />
-
+    <SwapChainPanel x:Name="swapChainPanel">
+        <Button Click="NavigateToMainMenu" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"  Style="{ThemeResource NavigationBackButtonNormalStyle}" Height="80" Width="80"/>
+    </SwapChainPanel>
 </Page>
