Dodano nowy motyw

--- a/nieTRIS future/PlayPage.xaml
+++ b/nieTRIS future/PlayPage.xaml
@@ -35,6 +35,7 @@
                             <x:String>Neon</x:String>
                             <x:String>Eggplant</x:String>
                             <x:String>Retro</x:String>
+                            <x:String>Miku</x:String>
                         </ComboBox>
                         <ComboBox SelectionChanged="SetAudioPack"  Header="Audio pack" PlaceholderText="Default" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="16" FontFamily="Segoe UI" Margin="0,0,0,5">
                             <x:String>Default</x:String>
