--- a/nieTRIS future/PlayPage.xaml
+++ b/nieTRIS future/PlayPage.xaml
@@ -31,6 +31,7 @@
             <Button.Flyout>
                 <Flyout>
                     <StackPanel>
+                        <Slider ValueChanged="SetStartingLevel" Header="Starting level" StepFrequency="1" Minimum="0" Maximum="10" TickFrequency="1" TickPlacement="Outside" />
                         <ComboBox SelectionChanged="SetTheme"  Header="Theme" PlaceholderText="Neon" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="16" Margin="0,0,0,5">
                             <x:String>Neon</x:String>
                             <x:String>Eggplant</x:String>
