--- a/nieTRIS future/StatsPage.xaml
+++ b/nieTRIS future/StatsPage.xaml
@@ -2,7 +2,7 @@
     x:Class="nieTRIS_future.StatsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Tetris"
+    xmlns:local="using:nieTris"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
