--- a/nieTRIS future/MainMenu.xaml
+++ b/nieTRIS future/MainMenu.xaml
@@ -48,6 +48,7 @@
                 
             </Button>
         </Grid>
+        <Button Grid.Column="1" Click="NavigateToSettings" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top"  Style="{ThemeResource NavigationBackButtonNormalStyle}" Height="80" Width="80"/>
         <Image Grid.Column="1" Margin="80,40,80,40" Source="Assets/nieTris logo.png"/>
     </Grid>
 </Page>
