--- a/nieTRIS future/SettingsPage.xaml
+++ b/nieTRIS future/SettingsPage.xaml
@@ -2,14 +2,16 @@
     x:Class="nieTRIS_future.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Tetris"
+    xmlns:local="using:nieTris"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid KeyUp="Grid_KeyDown">
-        <TextBlock HorizontalAlignment="Left" Margin="24,24,0,0" Text="Settings" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="48" FontWeight="Bold"/>
-        
+        <Button Click="NavigateToMainMenu" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"  Style="{ThemeResource NavigationBackButtonNormalStyle}" Height="80" Width="80"/>
+        <TextBlock HorizontalAlignment="Left" Margin="30,75,0,0" Text="Settings" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="48" FontWeight="Bold"/>
+        <Slider ValueChanged="SetMusicVolume" Loaded="SetMusicSliderValue" Header="Music volume" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,150,0,0" Height="70" Width="320" StepFrequency="0.1" Minimum="0" Maximum="1" TickFrequency="0.1" TickPlacement="Outside" />
+        <Slider ValueChanged="SetSfxVolume" Loaded="SetSfxSliderValue" Header="Sound effects volume" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,220,0,0" Height="70" Width="320" StepFrequency="0.1" Minimum="0" Maximum="1" TickFrequency="0.1" TickPlacement="Outside" />
     </Grid>
 </Page>
