--- a/nieTRIS future/PlayPage.xaml
+++ b/nieTRIS future/PlayPage.xaml
@@ -12,6 +12,12 @@
         <Button Click="NavigateToMainMenu" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Style="{ThemeResource NavigationBackButtonNormalStyle}" Height="80" Width="80"/>
         <FlipView x:Name="ModeSelector" SelectionChanged="ModeSelector_SelectionChanged" HorizontalAlignment="Center" Margin="0,90,0,90">
             <FlipView.Items>
+                <Grid x:Name="Endless">
+                    <Image Source="Assets\FlipCovers\Endless.png" Stretch="Uniform" VerticalAlignment="Top"/>
+                    <Border Background="#A5FFFFFF" VerticalAlignment="Bottom">
+                        <TextBlock Text="Endless" Foreground="#CC000000" Padding="12,12" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Center" FontWeight="Bold" FontSize="36" VerticalAlignment="Center"/>
+                    </Border>
+                </Grid>
                 <Grid x:Name="Marathon">
                     <Image Source="Assets\FlipCovers\Marathon.png" Stretch="Uniform" VerticalAlignment="Top"/>
                     <Border Background="#A5FFFFFF" VerticalAlignment="Bottom">
